--- a/INSTALL
+++ b/INSTALL
@@ -1,13 +1,14 @@
-# c: 19.01.2007, r: 02.09.2008
+# c: 19.01.2007, r: 25.11.2008
 
 This is not for faint of the heart!
 
 Installation prerequisites:
-    latest (SVN) numpy, scipy (with umfpack support), swig
+    recent numpy, scipy (with umfpack support), swig
 
 Dependencies:
     matplotlib, pyparsing, umfpack, pytables
     schroedinger.py requires pysparse
+    log.py (live plotting) requires multiprocessing
 
 For example in Debian:
   $ apt-get install python-tables python-pyparsing python-matplotlib python-scipy
@@ -55,8 +56,8 @@ No failures should be reported.
 
 If you get some failures it probably means some optional packages are not
 installed. Also be sure to have a recent version of Numpy and SciPy installed
-(SVN version are the best bet). Verify also your pytables (hdf5) installation
-(possible test_io.py failures).
+(latest releases or SVN versions are the best bet). Verify also your pytables
+(hdf5) installation (possible test_io.py failures).
 
 To debug a failure, run './runTests.py --debug'.
 See also './runTests.py --help' for further options.
@@ -64,9 +65,9 @@ See also './runTests.py --help' for further options.
 Documentation:
 --------------
 
-Documentation is in doc/sfepy_manual.pdf. It is automatically generated using
-the ./gen script in TOPDIR. It depends on 'pexpect' and 'lxml' packages. If you
-want to update, or regenerate, the documentation and have the prerequisities
-installed, do "./gen".
+Documentation is in doc/sfepy_manual.pdf. The file can be automatically
+generated using the ./gen script in TOPDIR. To run the script 'pexpect' and
+'lxml' packages are required. If you want to update, or regenerate, the
+documentation and have the prerequisities installed, do "./gen".
 
 See also 'http://sfepy.org' or 'http://sfepy.kme.zcu.cz'.
