--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+========================================
 SfePy (Simple finite elements in Python)
 ========================================
 
@@ -5,9 +6,49 @@ A finite element analysis software based primarily on NumPy and SciPy.
 
 See the INSTALL file for installation instructions.
 
-Documentation is in doc/sfepy_manual.pdf.
+How to start
+------------
+SfePy uses so called "problem definition files" (also referred to as
+"input files" or "problem description files"") that describe the partial
+differential equations (PDEs), boundary conditions, function spaces and
+other ingredients of the finite element (FE) formulation of a
+PDE-related problem, see [1]. The PDEs are given in weak formulation as
+usual in the FE context, see [2].
 
-See also:
+In order to solve a problem, an input file has to be created. There is a
+limited interactive solution support, too, using the isfepy shell, but
+this requires an existing input file too.
+
+To see which terms are available for the weak form of the PDEs, consult
+'doc/sfepy_manual.pdf'.
+
+When starting a new problem, it is best to have a look at example
+problem definition files in the 'input/' directory - copy the one that
+is similar to the problem at hand, and modify it. Two of the example
+inputs are commented: 'input/poisson.py' and 'input/linear_elastic.py'.
+
+While a problem definition file describes a mathematical problem, it
+does not contain a discretized solution domain (a FE mesh). The FE mesh must be
+provided in another file in one of the supported formats, notably the
+legacy VTK format [3]. SfePy does not provide meshing tools, but it can
+use a number of standard formats. The results are almost exclusively
+stored in legacy VTK files. Many standard open-source tools can be used
+to display such files, namely paraview [4], or mayavi [5]. The latter is
+supported directly within SfePy, either via the postproc.py script or
+the isfepy shell.
+
+Once an input file and a corresponding mesh file are prepared, the
+solution of the problem can be attempted by the 'simple.py' script, see
+Examples section in the INSTALL file.
+
+[1] http://code.google.com/p/sfepy/wiki/ProblemDescription
+[2] http://en.wikipedia.org/wiki/Weak_formulation
+[3] http://www.vtk.org/pdf/file-formats.pdf
+[4] http://paraview.org/
+[5] http://code.enthought.com/projects/mayavi/
+
+See also
+--------
  - 'http://sfepy.org' ... SfePy development (releases, mailing lists,
                           issue tracking, mercurial repository, documentation,
                           examples
