--- a/README
+++ b/README
@@ -22,20 +22,20 @@ this requires an existing input file too.
 To see which terms are available for the weak form of the PDEs, consult
 'doc/sfepy_manual.pdf'.
 
-When starting a new problem, it is best to have a look at example
-problem definition files in the 'input/' directory - copy the one that
-is similar to the problem at hand, and modify it. Two of the example
-inputs are commented: 'input/poisson.py' and 'input/linear_elastic.py'.
+When starting a new problem, it is best to have a look at example problem
+definition files in the 'examples/' directory - copy the one that is similar to
+the problem at hand, and modify it. Two of the examples are commented:
+'examples/diffusion/poisson.py' and
+'examples/linear_elasticity/linear_elastic.py'.
 
-While a problem definition file describes a mathematical problem, it
-does not contain a discretized solution domain (a FE mesh). The FE mesh must be
-provided in another file in one of the supported formats, notably the
-legacy VTK format [3]. SfePy does not provide meshing tools, but it can
-use a number of standard formats. The results are almost exclusively
-stored in legacy VTK files. Many standard open-source tools can be used
-to display such files, namely paraview [4], or mayavi [5]. The latter is
-supported directly within SfePy, either via the postproc.py script or
-the isfepy shell.
+While a problem definition file describes a mathematical problem, it does not
+contain a discretized solution domain (a FE mesh). The FE mesh must be provided
+in another file in one of the supported formats, notably the legacy VTK format
+[3]. SfePy does not provide meshing tools, but it can use a number of standard
+formats. The results are almost exclusively stored in legacy VTK files, or
+custom HDF5 files. Many standard open-source tools can be used to display the VTK
+files, namely paraview [4], or mayavi [5]. The latter is supported directly
+within SfePy, either via the postproc.py script or the isfepy shell.
 
 Once an input file and a corresponding mesh file are prepared, the
 solution of the problem can be attempted by the 'simple.py' script, see
