update docs (dependencies for sphinx documentation)

--- a/INSTALL
+++ b/INSTALL
@@ -11,6 +11,7 @@ Dependencies:
     log.py (live plotting) requires multiprocessing, matplotlib with GTKAgg
     isfepy requires ipython, mayavi2, matplotlib with WXAgg
     postproc.py, sfepy_gui.py require mayavi2
+    to be able to (re)generate the documentation: sphinx, numpydoc, LaTeX
 
 SfePy is known to work on various flavours of Linux, on Intel Macs and Windows.
 
