--- a/README
+++ b/README
@@ -53,7 +53,7 @@ See also
                           issue tracking, mercurial repository, documentation,
                           examples
  - http://sfepy.kme.zcu.cz ... projects solved within SfePy.
- - http://docs.sfepy.org/doc ... new documentation site (work in progress)
+ - http://docs.sfepy.org ... new documentation site
 
 License: New BSD License, see the LICENSE file.
 
